# zenjiro-bot-oci

./: .agent.md  .editorconfig  .gitignore  Aptfile  DEPLOYMENT_SETUP.md  IIJMIOTRBLBOT.sh  IIJMIOTRBLBot.sh  IIJmioTrblBot.sh  OcnMobileOneBot.sh  README.md  WiMAXOutageBot.sh  compare-and-tweet.inc.sh  create-table.sh  create_tweet.py  export-keys.inc.sh  hello.py  kawasakifirebot.sh  kawasakiwarnbot.sh  nanbulinebot.sh  ocnmobileonebot.sh  post.py  pyproject.toml  requirements.txt  run-10min.sh  run-all.sh  tepcousagebot.sh  tokyulinebot.sh  truncate.py  wimaxoutagebot.sh  yokohamafirebot.sh
.github/workflows/: deploy.yml  gemini-cli.yml  gemini-hello.yml  gemini-issue-automated-triage.yml  gemini-issue-scheduled-triage.yml  gemini-pr-review.yml  shellcheck.yml  shfmt.yml
