[project]
name = "zenjiro-bot-oci"
version = "0.1.0"
description = "Twitter bots on OCI that monitor outages, transportation, and emergencies in Japan and auto-post updates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools>=80.9.0",
    "twitter-text-parser>=3.0.0",
]
